node3tier/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: service-webdemo
  namespace: default

spec:
  selector:
    app: webdemo

  type: NodePort

  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
