node3tier/manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node3tier-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/target-type: ip
    external-dns.alpha.kubernetes.io/hostname: beveradb.us
spec:
  defaultBackend:
    service:
      name: service-node3tier-web
      port:
        number: 80
  rules:
    - host: beveradb.us
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: service-node3tier-api
                port:
                  number: 80
